# Manipulator

./: Makefile  Makefile2  a.out  action.h  action.h.gch  barrier.cpp  barrier.h  c_Map.cpp  manipulator.cpp  manipulator.h  res  td_map.cpp  td_map.h  td_object.cpp  td_object.h  test2.cpp  test3.cpp
OOP_Manipulator.v.3.0/: CMakeLists.txt
