cmake_minimum_required(VERSION 3.17)
project(OOP_Manipulator_v_3_0)

set(CMAKE_CXX_STANDARD 14)

add_executable(OOP_Manipulator_v_3_0 main.cpp cmake-build-debug/td_map.cpp cmake-build-debug/td_map.h cmake-build-debug/td_object.cpp cmake-build-debug/td_object.h cmake-build-debug/barrier.cpp cmake-build-debug/barrier.h cmake-build-debug/manipulator.cpp cmake-build-debug/manipulator.h cmake-build-debug/action.cpp cmake-build-debug/action.h)